# tauri-plugin-cache

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
.github/: dependabot.yml
.github/workflows/: audit.yml  clippy.yml  test.yml
android/: build.gradle.kts
android/src/main/java/: CachePlugin.kt
android/src/main/java/app/tauri/plugin/cache/: CachePlugin.java
examples/tauri-app/: index.html  jsconfig.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/src/lib/: CacheControls.svelte  CompressTest.svelte  Greet.svelte
guest-js/: index.ts
ios/: Package.swift  Plugin.swift
ios/Sources/: CachePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: has-key.toml  haskey.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
