[package]
name = "tauri-plugin-cache"
version = "0.1.0"
authors = ["Taiizor <taiizor@vegalya.com>"]
description = "A Tauri plugin for caching data on disk with optional TTL"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-cache"
license = "MIT"
repository = "https://github.com/Taiizor/tauri-plugin-cache"
readme = "README.md"

[dependencies]
tauri = { version = "2.5.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }