[package]
name = "tauri-plugin-cache"
version = "0.1.4"
authors = ["Taiizor <taiizor@vegalya.com>"]
description = "Advanced disk caching solution for Tauri applications. Provides compression, TTL management, memory caching, automatic cleanup, and cross-platform support. Enhances data access performance and storage optimization."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-cache"
license = "MIT"
repository = "https://github.com/Taiizor/tauri-plugin-cache"
readme = "README.md"

[features]
default = ["desktop", "mobile"]
desktop = []
mobile = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1" }
serde_json = "1.0"
base64 = "0.22.1"
thiserror = "2"
flate2 = "1.1"
xz2 = "0.1.7"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }